<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ViPER4Android XHiFi</string>
    <string name="select_configuration_title">ViPER4Android XHiFi</string>
    <string name="headset_title">Headset</string>
    <string name="speaker_title">Phone Speaker</string>
    <string name="bluetooth_title">Bluetooth Device</string>
    <string name="audio_effects">Audio Effects</string>

    <string name="dsp_settings_headset">Effect Settings - Headset</string>
    <string name="dsp_settings_speaker">Effect Settings - Phone Speaker</string>
    <string name="dsp_settings_bluetooth">Effect Settings - Bluetooth Device</string>

    <string name="pref_dsp_enable">Enable</string>
    <string name="pref_effect_title">Select Effect Strength</string>
    <string name="dialog_effect">Effect Strength</string>

    <string name="pref_fx_master_title">Master Power</string>
    <string name="pref_fx_master_summary_on">V4A-XHiFi is powered on</string>
    <string name="pref_fx_master_summary_off">V4A-XHiFi is powered off</string>

    <string name="pref_fx_limiter_title">Master Gate (Limiter)</string>
    <string name="pref_fx_limiter_threshold">Limit Threshold</string>
    <string name="pref_output_gain">Output Gain</string>

    <string name="pref_playback_title">Playback Gain Control</string>
    <string name="pref_playback_summary_on">PlaybackAGC is enabled</string>
    <string name="pref_playback_summary_off">PlaybackAGC is disabled</string>
    <string name="pref_playback_output_threshold">Max Output</string>
    <string name="pref_playback_maxgain">Max Gain</string>

    <string name="pref_equalizer_title">FIREqualizer</string>
    <string name="pref_equalizer_summary_on">FIREqualizer is enabled</string>
    <string name="pref_equalizer_summary_off">FIREqualizer is disabled</string>
    <string name="pref_equalizer_enable">Enable</string>
    <string name="pref_equalizer_preset_title">Select Preset</string>

    <string name="eq_preset_acoustic">Acoustic</string>
    <string name="eq_preset_bass_booster">Bass Booster</string>
    <string name="eq_preset_bass_reducer">Bass Reducer</string>
    <string name="eq_preset_classical">Classical</string>
    <string name="eq_preset_deep">Deep</string>
    <string name="eq_preset_flat">Flat</string>
    <string name="eq_preset_r_and_b">R&amp;B</string>
    <string name="eq_preset_rock">Rock</string>
    <string name="eq_preset_small_speakers">Small Speakers</string>
    <string name="eq_preset_treble_booster">Treble Booster</string>
    <string name="eq_preset_treble_reducer">Treble Reducer</string>
    <string name="eq_preset_vocal_booster">Vocal Booster</string>
    <string name="eq_preset_custom">Custom</string>

    <string name="pref_xfisound_title">Audio Reconstruct</string>
    <string name="pref_xfisound_summary_on">Audio reconstruct is enabled</string>
    <string name="pref_xfisound_summary_off">Audio reconstruct is disabled</string>
    <string name="pref_xfisound_enable">Enable</string>
    <string name="pref_xfisound_process">Hi Clarity</string>
    <string name="pref_xfisound_process_title">Select Hi Clarity</string>
    <string name="pref_xfisound_locontour">Lo Contour</string>
    <string name="pref_xfisound_locontour_title">Select Lo Contour</string>

    <string name="menu_reset">Reset</string>

    <string name="text_precious_float_unit">Bit Float</string>

    <string name="text_token_lost">ViPER4Android: Effect control failure, try to reload the driver.</string>
    <string name="text_enabled">Enabled</string>
    <string name="text_disabled">Disabled</string>
    <string name="text_headset">Headset</string>
    <string name="text_bluetooth">Bluetooth</string>
    <string name="text_speaker">Speaker</string>
    <string name="text_showtrayicon">Show Notification</string>
    <string name="text_lockeffect">Lock Effect Mode</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_normal">Normal</string>
    <string name="text_abnormal">Abnormal</string>

    <string name="text_effectprofile">Effect Profile</string>
    <string name="text_loadfxprofile">Load Effect Profile</string>
    <string name="text_savefxprofile">Save Effect Profile</string>
    <string name="text_pleaseinputname">Please input the name of profile
\nDo not include \'=\'
    </string>
    <string name="text_profilesaved_ok">Profile saved.</string>
    <string name="text_profilesaved_err">Can not save the profile, the name already exists.</string>
    <string name="text_profilesaved_overwrite">The profile name already exists, do you want to overwrite?</string>
    <string name="text_profileload_ok">Profile loaded.</string>
    <string name="text_profileload_err">Can not load the profile.</string>
    <string name="text_rwsd_error">Can not read/write external storage.</string>

    <string name="text_su_missing">Root permission (su binary) required.</string>

    <string name="text_busybox_missing">Busybox not found.
\nIn order to use ViPER4Android, you need to install busybox first.
    </string>

    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_select_cpu">Please select your CPU</string>

    <string name="text_drvvernotmatch">In order to use ViPER4Android, you need to install/update the V4A driver.
\nThe installation process will be done automatically.
\nInstall/update now?
    </string>

    <string name="text_drvuninst_confim">Do you really want to uninstall v4a driver?</string>

    <string name="text_user_statistics">v4a.active</string>

    <string name="text_drv_blank"></string>
    <string name="text_uninstall">Uninstall Driver</string>
    <string name="text_install">Install Driver</string>
    <string name="text_drvinst_ok">Driver installed, please reboot your phone.</string>
    <string name="text_drvuninst_ok">Driver uninstalled, please reboot your phone.</string>
    <string name="text_drvinst_failed">Driver install failed, please comfirm your phone has been rooted and busybox installed.</string>

    <string name="text_changelog">Changelog</string>
    <string name="text_drv_status">Driver Status</string>
    <string name="text_drv_status_view">
\n
\nDriver Version: %1$s
\nEnabled: %2$s
\nStatus: %3$s
\nProcessing: %4$s
\nPrecious: %5$s
\nSampling Rate: %6$d
\nChannels: %7$d
\n
    </string>
    <string name="text_service_error">Failed to communicate with ViPER4Android service.</string>

    <string name="str_about">Thanks to alankila for EQ UI.</string>
    <string name="str_copyright">Copyright© 2006–2016, vipercn.com.</string>

</resources>
