<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:title="@string/dsp_settings_speaker">

	<PreferenceCategory android:title="@string/pref_fx_master_title">
		<CheckBoxPreference android:key="viper4android.headphone_xhifi.enable"
			android:summaryOn="@string/pref_fx_master_summary_on" android:summaryOff="@string/pref_fx_master_summary_off"
			android:disableDependentsState="false" android:title="@string/pref_dsp_enable"></CheckBoxPreference>
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/pref_playback_title">
		<CheckBoxPreference android:key="viper4android.headphone_xhifi.playbackgain.enable"
			android:summaryOn="@string/pref_playback_summary_on" android:summaryOff="@string/pref_playback_summary_off"
			android:disableDependentsState="false" android:title="@string/pref_dsp_enable"></CheckBoxPreference>
		<com.vipercn.viper4android.xhifi.preference.SummariedListPreference
			android:entries="@array/playbackgain_ratio" android:dialogTitle="@string/dialog_effect" android:key="viper4android.headphone_xhifi.playbackgain.ratio" android:defaultValue="50" android:title="@string/pref_effect_title" android:entryValues="@array/playbackgain_ratio_values"/>
		<com.vipercn.viper4android.xhifi.preference.SummariedListPreference
			android:entries="@array/multi_factor" android:dialogTitle="@string/dialog_effect" android:key="viper4android.headphone_xhifi.playbackgain.maxscaler" android:defaultValue="400" android:title="@string/pref_playback_maxgain" android:entryValues="@array/multi_factor_values"/>
		<com.vipercn.viper4android.xhifi.preference.SummariedListPreference
			android:entries="@array/output_db" android:dialogTitle="@string/pref_effect_title" android:key="viper4android.headphone_xhifi.playbackgain.volume" android:defaultValue="80" android:title="@string/pref_playback_output_threshold" android:entryValues="@array/output_db_values"/>
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/pref_equalizer_title">
		<CheckBoxPreference android:disableDependentsState="false"
			android:key="viper4android.headphone_xhifi.fireq.enable" android:summaryOn="@string/pref_equalizer_summary_on"
			android:summaryOff="@string/pref_equalizer_summary_off" android:title="@string/pref_equalizer_enable"></CheckBoxPreference>
		<com.vipercn.viper4android.xhifi.preference.SummariedListPreference
			android:entries="@array/equalizer_preset_modes"
			android:dialogTitle="@string/pref_equalizer_preset_title"
			android:key="viper4android.headphone_xhifi.fireq"
			android:defaultValue="0.0;0.0;0.0;0.0;0.0;0.0;0.0;0.0;0.0;0.0;"
			android:title="@string/pref_equalizer_preset_title"
			android:entryValues="@array/equalizer_preset_values"/>
		<com.vipercn.viper4android.xhifi.preference.EqualizerPreference android:key="viper4android.headphone_xhifi.fireq.custom"/>
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/pref_xfisound_title">
		<CheckBoxPreference android:key="viper4android.headphone_xhifi.xfisound.enable"
			android:disableDependentsState="false" android:summaryOn="@string/pref_xfisound_summary_on"
			android:summaryOff="@string/pref_xfisound_summary_off" android:title="@string/pref_xfisound_enable"></CheckBoxPreference>
		<com.vipercn.viper4android.xhifi.preference.SummariedListPreference
			android:defaultValue="110" android:dialogTitle="@string/pref_xfisound_process_title" android:entries="@array/xfisound_process" android:entryValues="@array/xfisound_process_values" android:title="@string/pref_xfisound_process" android:key="viper4android.headphone_xhifi.xfisound.process"/>
		<com.vipercn.viper4android.xhifi.preference.SummariedListPreference
			android:defaultValue="0" android:dialogTitle="@string/pref_xfisound_locontour_title" android:entries="@array/xfisound_locontour" android:entryValues="@array/xfisound_locontour_values" android:title="@string/pref_xfisound_locontour" android:key="viper4android.headphone_xhifi.xfisound.locontour"/>
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/pref_fx_limiter_title">
		<com.vipercn.viper4android.xhifi.preference.SummariedListPreference
			android:entries="@array/output_volume" android:dialogTitle="@string/pref_effect_title" android:key="viper4android.headphone_xhifi.outvol" android:defaultValue="100" android:title="@string/pref_output_gain" android:entryValues="@array/output_volume_values"/>
		<com.vipercn.viper4android.xhifi.preference.SummariedListPreference
			android:entries="@array/output_db" android:dialogTitle="@string/pref_effect_title" android:key="viper4android.headphone_xhifi.limiter" android:defaultValue="100" android:title="@string/pref_fx_limiter_threshold" android:entryValues="@array/output_db_values"/>
	</PreferenceCategory>

</PreferenceScreen>
